...
    _headerView = [[UIView alloc] init];

    _followButton = [[UIButton alloc] init];
    PFUser *user = [PFUser currentUser];
    NSArray *candidatesFollowed = [user objectForKey:kCandidatesFollowedKey];
    if ([candidatesFollowed containsObject:_candidateObject.objectId]) {
      [_followButton setTitle:@"Following" forState:UIControlStateNormal];
      [_followButton setTitleColor:[UIColor whiteColor] forState:UIControlStateNormal];
      _followButton.backgroundColor = [KMCAssets lightBlueColor];
    } else {
      [_followButton setTitle:@"Follow" forState:UIControlStateNormal];
      [_followButton setTitleColor:[KMCAssets lightBlueColor] forState:UIControlStateNormal];
      _followButton.backgroundColor = [UIColor whiteColor];
    }
    _followButton.layer.cornerRadius = 5.f;
    _followButton.layer.borderColor = [KMCAssets lightBlueColor].CGColor;
    _followButton.layer.borderWidth = 2.f;
...
    _nameLabel.textColor = [UIColor whiteColor];

    _experienceLabel = [[UILabel alloc] init];
    _experienceLabel.font = [UIFont systemFontOfSize:14.f];
    _experienceLabel.textColor = [UIColor whiteColor];

    _segmentPicker = [[UISegmentedControl alloc] initWithItems:@[ @"Information", @"Standpoints" ]];
    _segmentPicker.selectedSegmentIndex = 0;
    [_segmentPicker addTarget:self
                       action:@selector(didTapSegmentPicker)
             forControlEvents:UIControlEventValueChanged];

    UICollectionViewFlowLayout *standpointsLayout = [[UICollectionViewFlowLayout alloc] init];
...
}

- (KMCPartyAffiliation)getAffiliation {
  NSString *party = _candidateObject[@"PartyAffiliation"];
  if ([party isEqualToString:@"Republican Party"]) {
    return KMCPartyAffiliationRepublican;
  } else if ([party isEqualToString:@"Democratic Party"]) {
    return KMCPartyAffiliationDemocratic;
  } else {
    return KMCPartyAffiliationGreen;
  }
}

#pragma mark - UICollectionViewDataSource

- (NSInteger)collectionView:(UICollectionView *)collectionView
     numberOfItemsInSection:(NSInteger)section {
  if ([collectionView isEqual:_standpointsView]) {
    NSArray *array = _candidateObject[@"Issues"];
    return [array count];
  } else {
    return [_infoTitleDict count] + 1;
  }
}

...
