...
}

- (instancetype)initWithNibName:(NSString *)nibNameOrNil bundle:(NSBundle *)nibBundleOrNil {
  self = [super initWithNibName:nibNameOrNil bundle:nibBundleOrNil];
  if (self) {
    UITabBarItem *item = [self tabBarItem];
    item.title = @"User";
    item.image = [KMCAssets userTabIcon];

    self.edgesForExtendedLayout = UIRectEdgeNone;
    self.navigationItem.rightBarButtonItem =
        [[UIBarButtonItem alloc] initWithTitle:@"Log Out"
                                         style:UIBarButtonItemStylePlain
                                        target:self
                                        action:@selector(didTapLogOut)];
    self.navigationItem.rightBarButtonItem.tintColor = [UIColor whiteColor];

    _logOutButton = [UIButton buttonWithType:UIButtonTypeRoundedRect];
...
        cell.stand = @"Disagrees";
      } else if (score <= 3.f) {
        cell.stand = @"Neutral/No opinion";
      } else if (score < 4.f) {
        cell.stand = @"Agrees";
      } else {
        cell.stand = @"Strongly Agrees";
      }
    }

    dict = [[PFUser currentUser] objectForKey:@"surveyAnswerWeights"];
    NSNumber *number = dict[id];
    CGFloat weight = [number floatValue];
...
